--- a/Index.html
+++ b/Index.html
@@ -76,7 +76,7 @@ body {
     padding: 14px;
   }
   .topnav input[type=text] {
-    border: 1px solid #ccc;  
+    border: 1px solid #ccc;
   }
 }
 </style>
@@ -108,16 +108,16 @@ Image here
 <div id="footer">
 <center>
 <p>
-<hr>
-© Andrew Smith 2021
-<br>
-<br>
-Contact Email : S3924888@student.rmit.edu.au
-<hr>
+  <hr>
+  © The Connected App
+  <br>
+  <br>
+  Contact Email : s3753153@student.rmit.edu.au
+  <hr>
 </p>
 </center>
-</div> 
+</div>
 </footer>
-</center> 
+</center>
 </body>
-</html> 
+</html>
