--- a/Index.html
+++ b/Index.html
@@ -89,7 +89,7 @@ Image here
 <br><br>
 <div class="topnav">
   <a class="active" href="#home">Home</a>
-  <a href="#about">About</a>
+  <a href="https://raw.githubusercontent.com/speedy84au11/OUA-SP1-2022-The-Dropbears/main/about-us.html">About</a>
   <div class="search-container">
     <form action="/action_page.php">
       <input type="text" placeholder="Search.." name="search">
