--- a/Index.html
+++ b/Index.html
@@ -88,7 +88,7 @@ Image here
 <br><br>
 <br><br>
 <div class="topnav">
-  <a class="active" href="#home">Home</a>
+  <a class="active" href="index.html">Home</a>
   <a href="about-us.html">About</a>
   <div class="search-container">
     <form action="/action_page.php">
