--- a/about-us.html
+++ b/about-us.html
@@ -4,7 +4,17 @@
 <link rel="stylesheet" href="https://raw.githubusercontent.com/speedy84au11/OUA-SP1-2022-The-Dropbears/main/Connected-APP.css">
 <body>
 <center>
-<h1>About Us</h1>
+<h1>About Us</h1>.
+<div class="topnav">
+  <a class="active" href="index.html">Home</a>
+  <a href="about-us.html">About</a>
+  <div class="search-container">
+    <form action="/action_page.php">
+      <input type="text" placeholder="Search.." name="search">
+      <button type="submit"><i class="fa fa-search"></i></button>
+    </form>
+  </div>
+</div>
 <p>
 We are Students at RMIT Online and this is an appliction/assessment for Building IT Systems (2207) as part of the Bachlor Of IT Diploma.
 </p>
