--- a/about-us.html
+++ b/about-us.html
@@ -26,16 +26,16 @@ The following people are creators of this project:
 Team Leader: Neil Conrad (Application Creator)
 </p>
 <p>
-Content creators:
-Angadh Bazaad
-Andrew Smith
-Damien Montalto
-Mark McLachlan
+Content creators:<br>
+Angadh Bazaad<br>
+Andrew Smith<br>
+Damien Montalto<br>
+Mark McLachlan<br>
 </p>
 <p>
-Tutors Over Seeing this project:
-A. B. M Russel
-Trevor Reynolds
+Tutors Over Seeing this project:<br>
+A. B. M Russel<br>
+Trevor Reynolds<br>
 </p>
 <footer>
 <div id="footer">
