--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@ Image here
 </div>
 <br>
 <div style="padding-left:16px">
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>About this site</h1>
+<p>info here.</p>
 <br><br>
 <br><br>
 <br><br>
