update about is page

--- a/about-us.html
+++ b/about-us.html
@@ -82,7 +82,10 @@ body {
 </head>
 <body>
 <center>
-<h1>About Us</h1>.
+<br><br>
+Image here
+<br><br>
+<br><br>
 <div class="topnav">
   <a class="active" href="index.html">Home</a>
   <a href="about-us.html">About</a>
@@ -93,7 +96,10 @@ body {
     </form>
   </div>
 </div>
-<p>
+<br>
+About Us
+<br>
+<div style="padding-left:16px"><p>
 We are Students at RMIT Online and this is an appliction/assessment for Building IT Systems (2207) as part of the Bachlor Of IT Diploma.
 </p>
 <br>
