--- a/about-us.html
+++ b/about-us.html
@@ -100,7 +100,7 @@ Image here
 About Us
 <br>
 <div style="padding-left:16px"><p>
-We are Students at RMIT Online and this is an appliction/assessment for Building IT Systems (2207) as part of the Bachlor Of IT Diploma.
+We are Students at RMIT Online and this is an appliction/assessment for Building IT Systems (2207) as part of the Bachelor Of IT Diploma.
 </p>
 <br>
 <p>
