--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ Image here
   <div class="search-container">
     <form action="/action_page.php">
       <input type="text" placeholder="Search.." name="search">
-      <button type="submit"><image=https://raw.githubusercontent.com/speedy84au11/OUA-SP1-2022-The-Dropbears/main/images.png></i></button>
+      <button type="submit"><image = "https://raw.githubusercontent.com/speedy84au11/OUA-SP1-2022-The-Dropbears/main/images.png" width= 20px hight = 20px></i></button>
     </form>
   </div>
 </div>
