--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@ Image here
   <a href="about-us.html">About</a>
   <div class="search-container">
     <form action="/action_page.php">
-      <input type="text" placeholder="Search.." name="search">
-      <button type="submit"><image = "https://raw.githubusercontent.com/speedy84au11/OUA-SP1-2022-The-Dropbears/main/images.png" width= 20px hight = 20px></i></button>
+      <input type="text" placeholder="Search here" name="search">
+      <button type="submit"><image = "https://raw.githubusercontent.com/speedy84au11/OUA-SP1-2022-The-Dropbears/main/images.png" width= 20px hight = 20px></image></button>
     </form>
   </div>
 </div>
