--- a/about-us.html
+++ b/about-us.html
@@ -93,7 +93,7 @@ Image here
   <div class="search-container">
     <form action="/action_page.php">
       <input type="text" placeholder="Search.." name="search">
-      <button type="submit"><i class="fa fa-search"></i></button>
+      <button type="submit"><image = "https://raw.githubusercontent.com/speedy84au11/OUA-SP1-2022-The-Dropbears/main/images/search-icon.png" width= 20px hight = 20px></image></button>
     </form>
   </div>
 </div>
