--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ Image here
 <br><br>
 <br><br>
 <div class="topnav">
-  <a class="active" href="index.html">Home</a>
+<button class="btn"><i class="index.html"></i></button>
   <a href="about-us.html">About</a>
   <div class="search-container">
     <form action="/action_page.php">
