--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@ Image here
 <br><br>
 <br><br>
 <div class="topnav">
-<button class="btn"><i class="index.html"></i></button>
+  <a class="active" href="index.html">Home</a>
   <a href="about-us.html">About</a>
   <div class="search-container">
     <form action="/action_page.php">
       <input type="text" placeholder="Search here" name="search">
-      <button type="submit"><image = "https://raw.githubusercontent.com/speedy84au11/OUA-SP1-2022-The-Dropbears/main/images/search-icon.png" width= 20px hight = 20px></image></button>
+      <button type="submit" image = "https://raw.githubusercontent.com/speedy84au11/OUA-SP1-2022-The-Dropbears/main/images/search-icon.png" width= 20px hight = 20px></button>
     </form>
   </div>
 </div>
