style sheet update

--- a/about-us.html
+++ b/about-us.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <title>About Us</title>
-<link rel="stylesheet" href="https://raw.githubusercontent.com/speedy84au11/OUA-SP1-2022-The-Dropbears/main/Connected-APP.css">
+<link rel="stylesheet" href="Connected-APP.css">
 
 <style>
 * {box-sizing: border-box;}
