--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>The Connected Application</title>
-<link rel="stylesheet" href="https://raw.githubusercontent.com/speedy84au11/OUA-SP1-2022-The-Dropbears/main/Connected-APP.css">
+<link rel="stylesheet" href="Connected-APP.css">
 
 <style>
 * {box-sizing: border-box;}
@@ -90,6 +90,7 @@ Image here
 <br><br>
 <div class="topnav">
   <a class="active" href="index.html">Home</a>
+
   <a href="about-us.html">About</a>
   <div class="search-container">
     <form action="/action_page.php">
