--- a/about-us.html
+++ b/about-us.html
@@ -12,14 +12,9 @@ Image here
 <br><br>
 <br><br>
 <div class="topnav">
-  <a class="active" href="index.html">Home</a>
-  <a href="about-us.html">About</a>
-  <div class="search-container">
-    <form action="/action_page.php">
-      <input type="text" placeholder="Search.." name="search">
-      <button type="submit"><image = "https://raw.githubusercontent.com/speedy84au11/OUA-SP1-2022-The-Dropbears/main/images/search-icon.png" width= 20px hight = 20px></image></button>
-    </form>
-  </div>
+ <a class="active" href="index.html">Home</a>
+ <a href="about-us.html">About</a>
+ <input type="text" placeholder="Search Here...">
 </div>
 <br>
 About Us
