--- a/about-us.html
+++ b/about-us.html
@@ -87,9 +87,14 @@ Image here
 <br><br>
 <br><br>
 <div class="topnav">
- <a class="active" href="index.html">Home</a>
- <a href="about-us.html">About</a>
- <input type="text" placeholder="Search Here...">
+  <a class="active" href="index.html">Home</a>
+  <a href="about-us.html">About</a>
+  <div class="search-container">
+    <form action="/action_page.php">
+      <input type="text" placeholder="Search.." name="search">
+      <button type="submit"><i class="fa fa-search"></i></button>
+    </form>
+  </div>
 </div>
 <br>
 About Us
