--- a/about-us.html
+++ b/about-us.html
@@ -1,100 +1,100 @@
 <!DOCTYPE html>
 <html>
-<title>About Us</title>
+<head>
+<title>The Connected Application</title>
 <link rel="stylesheet" href="Connected-APP.css">
 <style>
 * {box-sizing: border-box;}
 
 body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+ margin: 0;
+ font-family: Arial, Helvetica, sans-serif;
 }
 
 .topnav {
-  overflow: hidden;
-  background-color: #e9e9e9;
+ overflow: hidden;
+ background-color: #e9e9e9;
 }
 
 .topnav a {
-  float: left;
-  display: block;
-  color: black;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
+ float: left;
+ display: block;
+ color: black;
+ text-align: center;
+ padding: 14px 16px;
+ text-decoration: none;
+ font-size: 17px;
 }
 
 .topnav a:hover {
-  background-color: #ddd;
-  color: black;
+ background-color: #ddd;
+ color: black;
 }
 
 .topnav a.active {
-  background-color: #2196F3;
-  color: white;
+ background-color: #2196F3;
+ color: white;
 }
 
 .topnav .search-container {
-  float: right;
+ float: right;
 }
 
 .topnav input[type=text] {
-  padding: 6px;
-  margin-top: 8px;
-  font-size: 17px;
-  border: none;
+ padding: 6px;
+ margin-top: 8px;
+ font-size: 17px;
+ border: none;
 }
 
 .topnav .search-container button {
-  float: right;
-  padding: 6px 10px;
-  margin-top: 8px;
-  margin-right: 16px;
-  background: #ddd;
-  font-size: 17px;
-  border: none;
-  cursor: pointer;
+ float: right;
+ padding: 6px 10px;
+ margin-top: 8px;
+ margin-right: 16px;
+ background: #ddd;
+ font-size: 17px;
+ border: none;
+ cursor: pointer;
 }
 
 .topnav .search-container button:hover {
-  background: #ccc;
+ background: #ccc;
 }
 
 @media screen and (max-width: 600px) {
-  .topnav .search-container {
-    float: none;
-  }
-  .topnav a, .topnav input[type=text], .topnav .search-container button {
-    float: none;
-    display: block;
-    text-align: left;
-    width: 100%;
-    margin: 0;
-    padding: 14px;
-  }
-  .topnav input[type=text] {
-    border: 1px solid #ccc;
-  }
+ .topnav .search-container {
+   float: none;
+ }
+ .topnav a, .topnav input[type=text], .topnav .search-container button {
+   float: none;
+   display: block;
+   text-align: left;
+   width: 100%;
+   margin: 0;
+   padding: 14px;
+ }
+ .topnav input[type=text] {
+   border: 1px solid #ccc;
+ }
 }
 </style>
 </head>
-</head>
 <body>
-<center>
-<br><br>
-Image here
-<br><br>
-<br><br>
+ <center>
+ <br><br>
+ Image here
+ <br><br>
+ <br><br>
 <div class="topnav">
-  <a class="active" href="index.html">Home</a>
-  <a href="about-us.html">About</a>
-  <div class="search-container">
-    <form action="/action_page.php">
-      <input type="text" placeholder="Search.." name="search">
-      <button type="submit"><i class="fa fa-search"></i></button>
-    </form>
-  </div>
+ <a class="active" href="index.html">Home</a>
+ <a href="about-us.html">About</a>
+ <div class="search-container">
+   <form action="/action_page.php">
+     <input type="text" placeholder="Search.." name="search">
+     <button type="submit"><i class="fa fa-search"></i></button>
+   </form>
+ </div>
 </div>
 <br>
 About Us
