--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>The Connected Application</title>
 <link rel="stylesheet" href="Connected-APP.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 * {box-sizing: border-box;}
 
@@ -49,7 +50,7 @@ body {
 
 .topnav .search-container button {
   float: right;
-  padding: 6px 10px;
+  padding: 6px;
   margin-top: 8px;
   margin-right: 16px;
   background: #ddd;
@@ -92,7 +93,7 @@ body {
   <div class="search-container">
     <form action="/action_page.php">
       <input type="text" placeholder="Search.." name="search">
-      <button type="submit"><i class="fa fa-search"></i></button>
+      <button type="submit">Submit</button>
     </form>
   </div>
 </div>
