--- a/about-us.html
+++ b/about-us.html
@@ -116,6 +116,7 @@ Angadh Bazaad<br>
 Andrew Smith<br>
 Damien Montalto<br>
 Mark McLachlan<br>
+Matthew Manriquez<br>
 </p>
 <p>
 Tutors Over Seeing this project:<br>
