Update php page

--- a/index.html
+++ b/index.html
@@ -84,14 +84,14 @@ body {
 <body>
   <center>
   <br><br>
-  Image here
+  Logo Image here
   <br><br>
   <br><br>
 <div class="topnav">
   <a class="active" href="index.html">Home</a>
   <a href="about-us.html">About</a>
   <div class="search-container">
-    <form action="/action_page.php">
+    <form action="action_page.php">
       <input type="text" placeholder="Search.." name="search">
       <button type="submit">Submit</button>
     </form>
