--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ body {
   <a class="active" href="index.html">Home</a>
   <a href="about-us.html">About</a>
   <div class="search-container">
-    <form action="action_page.php">
+    <form action="search.html">
       <input type="text" placeholder="Search.." name="search">
       <button type="submit">Submit</button>
     </form>
