--- a/search.html
+++ b/search.html
@@ -4,6 +4,6 @@
 <title>Embed PHP in a .html File</title>
 </head>
 <body>
-<h1><?php echo "Hello World" ?></h1>
+<h1>Search function under construction</h1>
 </body>
 </html>
