--- a/search.html
+++ b/search.html
@@ -5,5 +5,7 @@
 </head>
 <body>
 <h1>Search function under construction</h1>
+<img src="https://raw.githubusercontent.com/speedy84au11/OUA-SP1-2022-The-Dropbears/main/images/website-under-construction-1.jpg" alt="Girl in a jacket" style="width:500px;height:600px;">
+
 </body>
 </html>
