--- a/search.html
+++ b/search.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Embed PHP in a .html File</title>
+<title>Search Results</title>
 </head>
 <body>
+  <center>
 <h1>Search function under construction</h1>
-<img src="https://raw.githubusercontent.com/speedy84au11/OUA-SP1-2022-The-Dropbears/main/images/website-under-construction-1.jpg" alt="Girl in a jacket" style="width:500px;height:600px;">
-
+<img src="https://raw.githubusercontent.com/speedy84au11/OUA-SP1-2022-The-Dropbears/main/images/website-under-construction-1.jpg" alt="Under Construction" style="width:800px;height:600px;">
+</center>
 </body>
 </html>
