--- a/index.html
+++ b/index.html
@@ -99,11 +99,19 @@ body {
 </div>
 <br>
 <div style="padding-left:16px">
-<h1>About this site</h1>
-<p>info here.</p>
-<br><br>
-<br><br>
-<br><br>
+  <br>
+  <br>
+<h1>Under Construction</h1>
+<br>
+<br>
+<br>
+<img src="https://raw.githubusercontent.com/speedy84au11/OUA-SP1-2022-The-Dropbears/main/images/website-under-construction-1.jpg" alt="Under Construction" style="width:800px;height:500px;">
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <footer>
 <div id="footer">
 <center>
