--- a/search.html
+++ b/search.html
@@ -83,8 +83,21 @@ body {
 </head>
 <body>
   <center>
-    <br>
-    <br>
+    <br><br>
+    Logo Image here
+    <br><br>
+    <br><br>
+  <div class="topnav">
+    <a class="active" href="index.html">Home</a>
+    <a href="about-us.html">About</a>
+    <div class="search-container">
+      <form action="search.html">
+        <input type="text" placeholder="Search.." name="search">
+        <button type="submit">Submit</button>
+      </form>
+    </div>
+  </div>
+  <br>
 <h1>Search function under construction</h1>
 <br>
 <br>
