Block out previous code to add PHP code

--- a/index.html
+++ b/index.html
@@ -84,9 +84,10 @@ body {
 <body>
   <center>
   <br><br>
-  Logo Image here
+<img src=" https://raw.githubusercontent.com/speedy84au11/OUA-SP1-2022-The-Dropbears/main/images/banner1.jpg " alt="Banner Logo - The Connected App" style="width:800px;height:500px;">
   <br><br>
   <br><br>
+  <!--
 <div class="topnav">
   <a class="active" href="index.html">Home</a>
   <a href="about-us.html">About</a>
@@ -112,6 +113,7 @@ body {
 <br>
 <br>
 <br>
+-->
 <footer>
 <div id="footer">
 <center>
