--- a/index.html
+++ b/index.html
@@ -82,11 +82,18 @@ body {
 </style>
 </head>
 <body>
-  <center>
+
   <br><br>
 <img src=" https://raw.githubusercontent.com/speedy84au11/OUA-SP1-2022-The-Dropbears/main/images/banner1.jpg " alt="Banner Logo - The Connected App" style="width:250px; height:100px;">
   <br><br>
   <br><br>
+<?php   include("./inc/header.php");  ?>
+
+<main></main>
+
+<?php   include("./inc/footer.php");  ?>
+
+  <center>
   <!--
 <div class="topnav">
   <a class="active" href="index.html">Home</a>
