--- a/index.html
+++ b/index.html
@@ -130,6 +130,38 @@ function toggleMenu() {
 <br>
 -->
 <footer>
+    <div class="footer-menu">
+        <div class="item">
+            <h4>services</h4>
+            <ul>
+                <li><a href="#">item 1</a></li>
+                <li><a href="#">item 2</a></li>
+                <li><a href="#">item 3</a></li>
+            </ul>
+        </div>
+        <div class="item">
+            <h4>shop</h4>
+            <ul>
+                <li><a href="#">item 1</a></li>
+                <li><a href="#">item 2</a></li>
+                <li><a href="#">item 3</a></li>
+            </ul>
+        </div>
+        <div class="item">
+            <h4>about</h4>
+            <ul>
+                <li><a href="#">item 1</a></li>
+                <li><a href="#">item 2</a></li>
+                <li><a href="#">item 3</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="bottom-bar">
+        <p>&copy; 2022 Dropbears</p>
+    </div>
+</footer>
+<script src="./js/script.js"></script>
+<!--footer>
 <div id="footer">
 <center>
 <p>
@@ -142,7 +174,7 @@ function toggleMenu() {
 </p>
 </center>
 </div>
-</footer>
+</footer-->
 </center>
 </body>
 </html>
