--- a/index.html
+++ b/index.html
@@ -1,96 +1,61 @@
- <!DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title>The Connected Application</title>
-<link rel="stylesheet" href="Connected-APP.css">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-* {box-sizing: border-box;}
-
-body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.topnav {
-  overflow: hidden;
-  background-color: #e9e9e9;
-}
-
-.topnav a {
-  float: left;
-  display: block;
-  color: black;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.topnav a.active {
-  background-color: #2196F3;
-  color: white;
-}
-
-.topnav .search-container {
-  float: right;
-}
-
-.topnav input[type=text] {
-  padding: 6px;
-  margin-top: 8px;
-  font-size: 17px;
-  border: none;
-}
-
-.topnav .search-container button {
-  float: right;
-  padding: 6px;
-  margin-top: 8px;
-  margin-right: 16px;
-  background: #ddd;
-  font-size: 17px;
-  border: none;
-  cursor: pointer;
-}
-
-.topnav .search-container button:hover {
-  background: #ccc;
-}
-
-@media screen and (max-width: 600px) {
-  .topnav .search-container {
-    float: none;
-  }
-  .topnav a, .topnav input[type=text], .topnav .search-container button {
-    float: none;
-    display: block;
-    text-align: left;
-    width: 100%;
-    margin: 0;
-    padding: 14px;
-  }
-  .topnav input[type=text] {
-    border: 1px solid #ccc;
-  }
-}
-</style>
-function toggleMenu() {
-    var x = document.getElementById("slide-menu-container");
-    if(x.style.display === "block") {
-        x.style.display = "none";
-    } else {
-        x.style.display = "block";
-    }
-}
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/b4eff55874.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
+    <title>The Connected App</title>
 </head>
 <body>
+    <div class="container">
 
+    <header>
+        <div class="top-bar"><p>Striving to connect people in need</p></div>
+        <nav>
+            <div class="logo">
+                <img src="./img/banner1.jpg" alt="">
+            </div>
+            <ul class="menu">
+                <li class="menu-item dd"><a class="down-arrow" href="">services</a>
+                    <ul class="dd-menu">
+                        <li><a href="#">food</a></li>
+                        <li><a href="#">housing</a></li>
+                        <li><a href="#">mental health</a></li>
+                    </ul>
+                </li>
+                <li class="menu-item"><a href="">shop</a></li>
+                <li class="menu-item"><a href="">about</a></li>
+                <li class="menu-item"><a href="">sign in</a></li>
+                <li class="menu-item"><a href="">register</a></li>
+            </ul>
+            <div class="hb-menu" onclick="toggleMenu()">
+                <svg class="hb-menu" viewBox="0 0 100 80" width="30" height="30">
+                    <rect width="100" height="12" style="fill:rgb(0, 24, 59)"></rect>
+                    <rect y="30" width="100" height="12" style="fill:rgb(0, 24, 59)"></rect>
+                    <rect y="60" width="100" height="12" style="fill:rgb(0, 24, 59)"></rect>
+                </svg>
+            </div>
+            <div id="slide-menu-container" >
+                <ul class="slide-content">
+                    <li class="slide-item"><a class="down-arrow" href="">services</a>
+                        <ul class="dd-slide-item">
+                            <li><a href="#">food</a></li>
+                            <li><a href="#">housing</a></li>
+                            <li><a href="#">mental health</a></li>
+                        </ul>
+                    </li>
+                    <li class="slide-item"><a href="">shop</a></li>
+                    <li class="slide-item"><a href="">about</a></li>
+                    <li class="slide-item"><a  class="border-black" href="">register</a></li>
+                    <li class="slide-item"><a class="border-blue" href="">sign in</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <?php include("tools.php"); ?>
   <br><br>
 <img src=" https://raw.githubusercontent.com/speedy84au11/OUA-SP1-2022-The-Dropbears/main/images/banner1.jpg " alt="Banner Logo - The Connected App" style="width:450px; height:300px;">
   <br><br>
