--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <footer>
     <div class="footer-menu">
         <div class="item">
-            <h4>services</h4>
+            <h4>Services</h4>
             <ul>
                 <li><a href="#">item 1</a></li>
                 <li><a href="#">item 2</a></li>
@@ -75,7 +75,7 @@
             </ul>
         </div>
         <div class="item">
-            <h4>shop</h4>
+            <h4>Shop</h4>
             <ul>
                 <li><a href="#">item 1</a></li>
                 <li><a href="#">item 2</a></li>
@@ -83,11 +83,11 @@
             </ul>
         </div>
         <div class="item">
-            <h4>about</h4>
+            <h4>About</h4>
             <ul>
-                <li><a href="#">item 1</a></li>
-                <li><a href="#">item 2</a></li>
-                <li><a href="#">item 3</a></li>
+                <li><a href="#">Creators</a></li>
+                <li><a href="#">Service Providers</a></li>
+                <li><a href="#"></a></li>
             </ul>
         </div>
     </div>
