added link to about-us page under creators

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="item">
             <h4>About</h4>
             <ul>
-                <li><a href="#">Creators</a></li>
+                <li><a href="about-us.html">Creators</a></li>
                 <li><a href="#">Service Providers</a></li>
                 <li><a href="#"></a></li>
             </ul>
