updated info in code

--- a/index.html
+++ b/index.html
@@ -69,24 +69,24 @@
         <div class="item">
             <h4>Services</h4>
             <ul>
-                <li><a href="#">item 1</a></li>
-                <li><a href="#">item 2</a></li>
-                <li><a href="#">item 3</a></li>
+                <li><a href="#">Food</a></li>
+                <li><a href="#">Housing / Accommodation</a></li>
+                <li><a href="#">Mental Health Services</a></li>
             </ul>
         </div>
         <div class="item">
             <h4>Shop</h4>
             <ul>
-                <li><a href="#">item 1</a></li>
-                <li><a href="#">item 2</a></li>
-                <li><a href="#">item 3</a></li>
+                <li><a href="#">Low Cost Items</a></li>
+                <li><a href="#">Services Shop</a></li>
+                <li><a href="#">Swap Shop</a></li>
             </ul>
         </div>
         <div class="item">
             <h4>About</h4>
             <ul>
                 <li><a href="about-us.html">Creators</a></li>
-                <li><a href="#">Service Providers</a></li>
+                <li><a href="serviceproviders.html">Service Providers</a></li>
                 <li><a href="#"></a></li>
             </ul>
         </div>
