--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
         <div class="top-bar"><p>Striving to connect people in need</p></div>
         <nav>
             <div class="logo">
-                <img src="./img/banner1.jpg" alt="">
+              <!--img src="./img/banner1.jpg" alt="" -->
+              <a href="https://speedy84au11.github.io/OUA-SP1-2022-The-Dropbears/">
+       <img src="./img/banner1.jpg" alt="">
+    </a> 
             </div>
             <ul class="menu">
                 <li class="menu-item dd"><a class="down-arrow" href="">services</a>
