--- a/about-us.html
+++ b/about-us.html
@@ -62,7 +62,7 @@
 
 <?php   include("./inc/header.php");  ?>
 
-<main></main>
+<main> About Us info here</main>
 
 <?php   include("./inc/footer.php");  ?>
 <?php include("config/db_connect.php"); ?>
