update About us info

--- a/about-us.html
+++ b/about-us.html
@@ -62,7 +62,32 @@
 
 <?php   include("./inc/header.php");  ?>
 
-<main> About Us info here</main>
+<main> <br>
+About Us
+<br>
+<div style="padding-left:16px"><p>
+We are Students at RMIT Online and this is an appliction/assessment for Building IT Systems (2207) as part of the Bachelor Of IT Diploma.
+</p>
+<br>
+<p>
+The following people are creators of this project:
+</p>
+<p>
+Team Leader: Neil Conrad (Application Creator)
+</p>
+<p>
+Content creators:<br>
+Angadh Bazaad<br>
+Andrew Smith<br>
+Damien Montalto<br>
+Mark McLachlan<br>
+Matthew Manriquez<br>
+</p>
+<p>
+Tutors Over Seeing this project:<br>
+A. B. M Russel<br>
+Trevor Reynolds<br>
+</p></main>
 
 <?php   include("./inc/footer.php");  ?>
 <?php include("config/db_connect.php"); ?>
