code in main tags visible?

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               <!--img src="./img/banner1.jpg" alt="" -->
               <a href="https://speedy84au11.github.io/OUA-SP1-2022-The-Dropbears/">
        <img src="./img/banner1.jpg" alt="">
-    </a> 
+    </a>
             </div>
             <ul class="menu">
                 <li class="menu-item dd"><a class="down-arrow" href="">services</a>
@@ -62,7 +62,10 @@
 
 <?php   include("./inc/header.php");  ?>
 
-<main></main>
+<main>
+<h1> info herefor the content of the page </h1>
+
+</main>
 
 <?php   include("./inc/footer.php");  ?>
 <?php include("config/db_connect.php"); ?>
