--- a/about-us.html
+++ b/about-us.html
@@ -62,7 +62,7 @@
 
 <?php   include("./inc/header.php");  ?>
 
-<main> <br>
+<main> <center>
 About Us
 <br>
 <div style="padding-left:16px"><p>
@@ -87,7 +87,9 @@ Matthew Manriquez<br>
 Tutors Over Seeing this project:<br>
 A. B. M Russel<br>
 Trevor Reynolds<br>
-</p></main>
+</p>
+</center>
+</main>
 
 <?php   include("./inc/footer.php");  ?>
 <?php include("config/db_connect.php"); ?>
