testing code in main tags

--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
 <?php   include("./inc/header.php");  ?>
 
 <main>
-<h1> info herefor the content of the page </h1>
-
+  <center>
+<h1> info here for the content of the page </h1>
+</center>
 </main>
 
 <?php   include("./inc/footer.php");  ?>
