--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     </ul>
                 </li>
                 <li class="menu-item"><a href="">shop</a></li>
-                <li class="menu-item"><a href="#About">about</a></li>
+                <li class="menu-item"><a href="footer-menu">about</a></li>
                 <li class="menu-item"><a href="">sign in</a></li>
                 <li class="menu-item"><a href="">register</a></li>
             </ul>
