--- a/about-us.html
+++ b/about-us.html
@@ -30,8 +30,8 @@
                     </ul>
                 </li>
                 <li class="menu-item"><a href="">shop</a></li>
-                <li class="menu-item"><a href="<a href="https://speedy84au11.github.io/OUA-SP1-2022-The-Dropbears/">
-      </a>">Home</a></li>
+                <li class="menu-item"><a href="https://speedy84au11.github.io/OUA-SP1-2022-The-Dropbears/">Home</a>
+                </li>
                 <li class="menu-item"><a href="">sign in</a></li>
                 <li class="menu-item"><a href="">register</a></li>
             </ul>
