--- a/index.html
+++ b/index.html
@@ -90,12 +90,13 @@
             </ul>
         </div>
         <div class="item">
+          <a id="#ABOUT">
             <h4>About</h4>
             <ul>
                 <li><a href="about-us.html">Creators</a></li>
                 <li><a href="serviceproviders.html">Service Providers</a></li>
                 <li><a href="#"></a>....</li>
-            </ul>
+            </ul></a>
         </div>
     </div>
     <div class="bottom-bar">
