--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
             </ul>
         </div>
         <div class="item">
-          <a id="#ABOUT">
+
             <h4>About</h4>
             <ul>
-                <li><a href="about-us.html">Creators</a></li>
+                <li><a id="#ABOUT"><a href="about-us.html">Creators</a></a></li>
                 <li><a href="serviceproviders.html">Service Providers</a></li>
                 <li><a href="#"></a>....</li>
-            </ul></a>
+            </ul>
         </div>
     </div>
     <div class="bottom-bar">
