--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     </ul>
                 </li>
                 <li class="menu-item"><a href="">shop</a></li>
-                <li class="menu-item"><a href="#ABOUT">about</a></li>
+                <li class="menu-item"><a href="ABOUT">about</a></li>
                 <li class="menu-item"><a href="">sign in</a></li>
                 <li class="menu-item"><a href="">register</a></li>
             </ul>
@@ -51,7 +51,7 @@
                         </ul>
                     </li>
                     <li class="slide-item"><a href="">shop</a></li>
-                    <li class="slide-item"><a href="#About">about</a></li>
+                    <li class="slide-item"><a href="About">about</a></li>
                     <li class="slide-item"><a  class="border-black" href="">register</a></li>
                     <li class="slide-item"><a class="border-blue" href="">sign in</a></li>
                 </ul>
@@ -90,10 +90,10 @@
             </ul>
         </div>
         <div class="item">
-
+            <a id="ABOUT"></a>
             <h4>About</h4>
             <ul>
-                <li><a id="#ABOUT"><a href="about-us.html">Creators</a></a></li>
+                <li><a id="#ABOUT">Creators</a></li>
                 <li><a href="serviceproviders.html">Service Providers</a></li>
                 <li><a href="#"></a>....</li>
             </ul>
@@ -103,6 +103,7 @@
         <p>&copy; 2022 Dropbears</p>
     </div>
 </footer>
+
 <script src="./js/script.js"></script>
 </center>
 </body>
