--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
             </ul>
         </div>
         <div class="item">
-            <a id="ABOUT"></a>
-            <h4>About</h4>
+            <a id="ABOUT">
+            <h4>About</h4></a>
             <ul>
                 <li><a id="#ABOUT">Creators</a></li>
                 <li><a href="serviceproviders.html">Service Providers</a></li>
