--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     </ul>
                 </li>
                 <li class="menu-item"><a href="">shop</a></li>
-                <li class="menu-item"><a href="ABOUT">about</a></li>
+                <li class="menu-item"><a href="about-us.html">about</a></li>
                 <li class="menu-item"><a href="">sign in</a></li>
                 <li class="menu-item"><a href="">register</a></li>
             </ul>
@@ -51,7 +51,7 @@
                         </ul>
                     </li>
                     <li class="slide-item"><a href="">shop</a></li>
-                    <li class="slide-item"><a href="About">about</a></li>
+                    <li class="slide-item"><a href="about-us.html">about</a></li>
                     <li class="slide-item"><a  class="border-black" href="">register</a></li>
                     <li class="slide-item"><a class="border-blue" href="">sign in</a></li>
                 </ul>
@@ -90,8 +90,7 @@
             </ul>
         </div>
         <div class="item">
-            <a id="ABOUT">
-            <h4>About</h4></a>
+            <h4>About</h4>
             <ul>
                 <li><a id="#ABOUT">Creators</a></li>
                 <li><a href="serviceproviders.html">Service Providers</a></li>
