--- a/serviceproviders.html
+++ b/serviceproviders.html
@@ -59,25 +59,30 @@
             </div>
         </nav>
     </header>
-<?php include("tools.php"); ?>
+    <?php include("tools.php"); ?>
 
-<?php   include("./inc/header.php");  ?>
+    <?php   include("./inc/header.php");  ?>
 
-<main> <center>
-  <h1>
-About Us
-</h1>
-<br>
-<div style="padding-left:16px"><p>
+    <main> <center>
+      <h1>
+    About Us
+    </h1>
+    <br>
+    <div style="padding-left:16px">
+<h1>Food Service Providers</h1>
+    <br>
+    <h1>
+Accomodation Service Providers
+    </h1>
+    <br>
+    <h1>
+Mental Health Service Providers
+    </h1>
+    </center>
+    </main>
 
-<center>
-
-<h1> List of Service Providers </h1>
-<br>
-Service Providers here
-<br>
-  </center>
-
+    <?php   include("./inc/footer.php");  ?>
+    <?php include("config/db_connect.php"); ?>
 <footer>
     <div class="footer-menu">
         <div class="item">
