link fix for about html

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="item">
             <h4>About</h4>
             <ul>
-                <li><a id="#ABOUT">Creators</a></li>
+                <li><a href="about-us.html">Creators</a></li>
                 <li><a href="serviceproviders.html">Service Providers</a></li>
                 <li><a href="#"></a>....</li>
             </ul>
