--- a/accomodation.html
+++ b/accomodation.html
@@ -7,7 +7,7 @@
     <script src="https://kit.fontawesome.com/b4eff55874.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
-    <title>The Connected App</title>
+    <title>The Connected App - Accomodation</title>
 </head>
 <body>
     <div class="container">
@@ -65,15 +65,8 @@
 
     <main> <center>
     <div style="padding-left:16px">
-<h1>Food Service Providers</h1>
+<h1>Accomodation Providers</h1>
     <br>
-    <h1>
-Accomodation Service Providers
-    </h1>
-    <br>
-    <h1>
-Mental Health Service Providers
-    </h1>
     </center>
     </main>
 
