link updates to new pages created

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             <ul class="menu">
                 <li class="menu-item dd"><a class="down-arrow" href="">services</a>
                     <ul class="dd-menu">
-                        <li><a href="#">food</a></li>
-                        <li><a href="#">housing</a></li>
-                        <li><a href="#">mental health</a></li>
+                        <li><a href="food.html">food</a></li>
+                        <li><a href="accomodation.html">housing</a></li>
+                        <li><a href="mentalhealth.html">mental health</a></li>
                     </ul>
                 </li>
                 <li class="menu-item"><a href="">shop</a></li>
@@ -45,9 +45,9 @@
                 <ul class="slide-content">
                     <li class="slide-item"><a class="down-arrow" href="">services</a>
                         <ul class="dd-slide-item">
-                            <li><a href="#">food</a></li>
-                            <li><a href="#">housing</a></li>
-                            <li><a href="#">mental health</a></li>
+                            <li><a href="food.html">food</a></li>
+                            <li><a href="accomodation.html">housing</a></li>
+                            <li><a href="mentalhealth.html">mental health</a></li>
                         </ul>
                     </li>
                     <li class="slide-item"><a href="">shop</a></li>
@@ -76,9 +76,9 @@
         <div class="item">
             <h4>Services</h4>
             <ul>
-                <li><a href="#">Food</a></li>
-                <li><a href="#">Housing / Accommodation</a></li>
-                <li><a href="#">Mental Health Services</a></li>
+                <li><a href="food.html">Food</a></li>
+                <li><a href="accomodation.html">Housing / Accommodation</a></li>
+                <li><a href="mentalhealth.html">Mental Health Services</a></li>
             </ul>
         </div>
         <div class="item">
