--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
 
 <main>
   <center>
-<h1> info here for the content of the page </h1>
+    <br>
+<h1> info here for the content of the page <br>
+(update information here)
+</h1>
 </center>
 </main>
 
